--- a/car-store/package.json
+++ b/car-store/package.json
@@ -9,9 +9,12 @@
     "dotenv": "^16.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
     "react-scripts": "5.0.0",
     "react-to-webcomponent": "^1.5.1",
+    "redux": "^4.2.0",
     "web-vitals": "^0.2.4",
+    "webcomponents-redux": "^2.0.1",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
     "workbox-cacheable-response": "^5.1.4",
@@ -50,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.14.0",
     "mini-css-extract-plugin": "^2.6.0",
     "react-app-rewired": "^2.2.1"
   }
